# printit

./: Cargo.toml
src/: ansi_colors.rs  bad_names.rs  error.rs  list.rs  lpr.rs  main.rs  print.rs  printers.txt  ssh.rs  upload.rs
