[package]
name = "printit"
description = "CLI for printing at Chalmers University"
version = "1.0.0"
authors = [
	"Joakim Hulthe <joakim@hulthe.net>",
	"Vidar Magnusson <git@vidarmagnusson.com>",
]
keywords = ["chalmers", "cth", "print", "printing"]
homepage = "https://github.com/hulthe/printit"
repository = "https://github.com/hulthe/printit"
# Cargo wants it to be MPL-2.0, The AUR wants it to be MPL2 ¯\_(ツ)_/¯
license = "MPL2"
edition = "2018"

[dependencies]
structopt = "0.3.23"
ssh2 = "0.9.1"
rand = "0.8.4"
regex = "1.5"
lazy_static = "1.4.0"
rpassword = "5.0.1"
thiserror = "1"

[dependencies.rustyline]
version = "9.0.0"
features = ["with-fuzzy"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-std", "io-util"]
